ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode6/input.ts.stderr
error[1100]: Invalid use of 'arguments' in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode6/input.ts:2:1
  |
2 | eval++;
  | ^^^^

